fix: fix bug visibility on full screen

--- a/random-game/style.css
+++ b/random-game/style.css
@@ -14,19 +14,19 @@ body {
 header,
 .buttons {
     display: flex;
-    width: 50vw;
+    width: 40vw;
     margin: 0 auto;
     justify-content: space-between;
-    height: 200px;
+    height: 150px;
     align-items: center;
 }
 .btn {
-    width: 10.6vw;
+    width: 8.6vw;
     background: rgb(173, 23, 238);
     background: linear-gradient(157deg, rgba(173, 23, 238, 1) 5%, rgba(237, 224, 245, 1) 73%);
     box-shadow: 2px 4px 12px rgba(134, 64, 169, 67%);
     border-radius: 19px;
-    font-size: 2vw;
+    font-size: 1.5vw;
     padding: 15px 20px;
     color: #fff;
     cursor: pointer;
@@ -40,13 +40,13 @@ header,
     box-shadow: 0px 10px 20px -2px rgba(0, 0, 0, 0.3);
 }
 .timer {
-    width: 10.6vw;
+    width: 8.6vw;
     background: #fcfcfc;
     border: 1px solid silver;
     border-radius: 19px;
     padding: 15px 20px;
     margin-top: 15px;
-    font-size: 2vw;
+    font-size: 1.5vw;
     color: #333;
     font-family: "Open Sans", sans-serif;
     font-weight: bold;
@@ -62,46 +62,46 @@ header,
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 50vw;
+    margin-top: 40vw;
 }
 .timer {
     display: flex;
 }
 .playing_field {
-    width: 50vw;
+    width: 40vw;
     display: flex;
     flex-wrap: wrap;
-    gap: 0.6vw;
-    top: 200px;
-    left: 25vw;
+    gap: 0.4vw;
+    top: 157px;
+    left: 30vw;
     position: absolute;
 }
 .cell {
-    width: 5vw;
-    height: 5vw;
+    width: 4vw;
+    height: 4vw;
     background-color: rgb(255, 240, 223);
-    font-size: 5vw;
+    font-size: 4vw;
     text-align: center;
     box-shadow: 0 0 8px #000000;
     border-radius: 3px;
     text-shadow: rgb(217, 0, 255) 1px 0 10px;
-    line-height: 5vw;
+    line-height: 4vw;
 }
 .cell > img {
-    width: 5vw;
+    width: 4vw;
 }
 .hiding_field {
-    top: 200px;
-    left: 25vw;
-    width: 50vw;
+    top: 157px;
+    left: 30vw;
+    width: 40vw;
     display: flex;
     flex-wrap: wrap;
-    gap: 0.6vw;
+    gap: 0.4vw;
     position: absolute;
 }
 .hiding_cell {
-    width: 5vw;
-    height: 5vw;
+    width: 4vw;
+    height: 4vw;
     background-color: rgb(134, 64, 169);
     border-radius: 3px;
 }
@@ -137,16 +137,16 @@ header,
 }
 .modal > div {
     color: rgb(6, 1, 1);
-    font-size: 1.5vw;
+    font-size: 1vw;
     font-weight: 400;
 }
 .modal > div > img {
-    width: 26vw;
+    width: 17vw;
 }
 .modal > .looser,
 .modal > .winner {
     color: rgb(0 0 0);
-    font-size: 5vw;
+    font-size: 3vw;
     font-weight: bold;
     text-align: center;
 }
